syntax = "proto3";
package file;

option go_package = "../file";

import "template/meta.proto";
import "google/protobuf/timestamp.proto";

message File {
  string id = 1;
  string key = 2;
  int64 createdAt = 3;
  google.protobuf.Timestamp expirationTime = 4;
  string type = 5;
  string category = 6;
  uint64 accountId = 7;
  string name = 8;
  string path = 9;
  Meta meta = 10;
}
